fixed spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -152,10 +152,6 @@ footer > p {
 }
 
 
-.eatery {
-    overflow: auto;
-}
-
 
 /* -------------- Saved Itineraries Aside --------------- */
 
